--- a/openvidu-call-react/src/components/VideoRoomComponent.css
+++ b/openvidu-call-react/src/components/VideoRoomComponent.css
@@ -1,6 +1,6 @@
 #header {
   color: #ffffff;
-  background-color: #333333;
+  background-color: #282c33;
   padding: 0 14px 0 0;
   position: absolute;
   top: 0;
@@ -16,7 +16,7 @@
 
 #titleContent{
   max-width: 100px;
-  background-color: #494949;
+  background-color: #36393d;
   margin: 5px -18px;
   padding: 0px 15px;
   font-size: 16px;
@@ -45,7 +45,7 @@
 
 
 .bounds {
-  background-color: #494949;
+  background-color: #36393d;
   overflow: hidden;
   position: absolute;
   left: 0;
