--- a/openvidu-call-react/src/components/toolbar/ToolbarComponent.css
+++ b/openvidu-call-react/src/components/toolbar/ToolbarComponent.css
@@ -1,7 +1,7 @@
 #header {
   color: #ffffff;
   height: 40px;
-  background-color: #333333;
+  background-color: #282c33;
   padding: 0 14px 0 0;
   position: absolute;
   top: 0;
@@ -37,7 +37,7 @@
 
 #titleContent {
   max-width: 100px;
-  background-color: #494949;
+  background-color: #36393d;
   margin: 5px -18px;
   padding: 0px 15px;
   font-size: 16px;
