--- a/openvidu-call-react/src/index.css
+++ b/openvidu-call-react/src/index.css
@@ -8,5 +8,5 @@ body {
   font-family: 'Open Sans', sans-serif;
   height: 100%;
   width: 100%;
-  background-color: #494949;
+  background-color: #36393d;
 }
