--- a/openvidu-call-react/src/components/toolbar/ToolbarComponent.css
+++ b/openvidu-call-react/src/components/toolbar/ToolbarComponent.css
@@ -1,13 +1,11 @@
-#header {
-  color: #ffffff;
-  height: 40px;
-  background-color: #282c33;
-  padding: 0 14px 0 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 999999;
-  min-width: 300px !important;
+.appbar {
+  top: auto;
+  bottom: 0;
+  height: 70px;
+  padding-top: 10px;
+  border-radius: 10px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .toolbar {
@@ -30,9 +28,38 @@
   min-width: 300px;
 }
 
+#icon {
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+  margin-left: 5px;
+  color: white;
+}
+
+#navMicButton {
+  margin-right: 2.5px;
+}
+
+#navCamButton {
+  margin-left: 2.5px;
+  margin-right: 2.5px;
+}
+
+#navScreenButton, #navFlipButton {
+  margin-right: 5px;
+  margin-left: 2.5px;
+}
+
 #navChatButton {
   position: absolute;
-  right: 10px;
+}
+
+#navLeaveButton {
+  background-color: #fa282d;
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 #titleContent {
